index.htmlにおすすめURLを追加しました

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<head>
 		</head>
 		<body>
-			<p>Let's team develop</P>
+			<p>Let's team develop</p>
+			<a href="https://morijyobi.ac.jp/">Webページ</a>
 		</body>
 	</html>
